2023-09-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test46-read-password): Use `copy-tree' but
	`copy-sequence'.
	(tramp-test46-read-otp-password): New test.

2023-09-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-netbsd-p): New defun.
	(tramp--test-check-files): Use it.

2023-08-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (tramp-archive-test44-user-group-ids):
	Extend test.

	* tramp-tests.el (tramp-test47-read-password): Tag it :unstable.

2023-08-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test41-special-characters): Skip for macOS.

2023-08-09  Mattias Engdegård  <mattiase@acm.org>

	* tramp-tests.el (tramp-test30-make-process): Duck make-process
	bytecomp warning.

2023-08-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test10-write-region): Extend test.
	(tramp--test-openbsd-p): New defun.
	(tramp-test41-special-characters, tramp-test42-utf8): Use it.
	(Bug#64935)
	(tramp-test42-utf8): Skip for macOS.

2023-07-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-instrument-test-case): Don't bind
	`trace-buffer'.

2023-07-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (tramp-archive-test49-without-remote-files):
	* tramp-tests.el (tramp-test49-without-remote-files): New tests.
	(tramp-test50-unload): Rename.

2023-07-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test33-environment-variables): Adapt test.

2023-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (%.log): Set EXTRA_ARGS.
	(%-tests): Use it.

2023-07-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test49-unload): Extend test.

2023-07-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (remote-file-name-access-timeout): Declare.
	(tramp-test18-file-attributes): Extend test.

2023-06-28  Michael Albinus  <michael.albinus@gmx.de>
